tests/NormalTests/paczka2/big_fuzzy/39073474.err
Error in line 1: 7qBCGvtq A678 52,3
Error in line 17: PPf A589 84,2
Error in line 8: 7qBCGvtq S688 65,7
Error in line 30: A678 S688 54,7
Error in line 38: BsjGmiD S6uu 72,5
Error in line 51: e9VbdVjlEg S688 360,4
Error in line 49: A678 A589 289,4
Error in line 74: tnrVqB S688 97,34
Error in line 69: e9VbdVjlEg S688 74,4
Error in line 78: BkcqgQj04LZ S688 -5,0
Error in line 76: e9VbdVjlEg A678 47,2
Error in line 73: 7qBCGvtq A678 158,6
Error in line 81: PPf A615 67,8
Error in line 90: BsjGmiD A589 59,7
Error in line 77: A678 A615 159,1
Error in line 127: BkcqgQj04LZ S688 81,6
Error in line 101: 7qBCGvtq A589 144,9
Error in line 140: BsjGmiD A589 57,1
Error in line 137: A678 A589 274,5
Error in line 146: BsjGmiD S688 2,3
Error in line 152: BkcqgQj04LZ A678 91,9
Error in line 159: BkcqgQj04LZ S688 11,4
Error in line 172: PPf A678 9,6
Error in line 184: 7qBCGvtq A615 30,7
Error in line 188: e9VbdVjlEg A589 84,9
Error in line 199: A678 A615 35,6
Error in line 202: BsjGmiD A589 359,4
Error in line 179: BkcqgQj04LZ A589 157,3
Error in line 212: BkcqgQj04LZ A678 46,5
Error in line 214: PPf A615 31,5
Error in line 220: A678 S688 2,0
Error in line 213: BkcqgQj04LZ A589 96,9
Error in line 229: BkcqgQj04LZ A678 56,3
Error in line 219: BsjGmiD A615 72,8
Error in line 236: BkcqgQj04LZ A678 70,7
Error in line 237: BkcqgQj04LZ A589 72,1
Error in line 238: BkcqgQj04LZ S688 15,5
